syntax = "proto3";

package jp.legalontech.cabinet;

service AzureService {
    rpc GetAccessToken(GetAccessTokenRequest) returns (AuthenticationResponse) {}
}

message GetAccessTokenRequest {
    string username = 1;
    string password = 2;
}

message GetAccessTokenResponse {
    string token_type = 1;
    string scope = 2;
    string expires_in = 3;
    string ext_expires_in = 4;
    string expires_on = 5;
    string not_before = 6;
    string resource = 7;
    string access_token = 8;
    string refresh_token = 9;
}

message AuthenticationResponse {
    GetAccessTokenResponse data = 1;
    string message = 2;
}
