syntax = "proto3";

package jp.legalontech.cabinet;

import "user_service.proto";
import "azure_service.proto";

message LoginRequest {
    string mail = 1;
    string password = 2;
}

message LoginResponse {
    User data = 1;
    GetAccessTokenResponse azure_info = 2;
    string message = 3;
}

service LoginService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}


